# ChatTensorflow-prod

./: .env.example  .gitignore  Dockerfile  README.md  compose.yml  pyproject.toml
airflow/: Dockerfile
airflow/dags/: tf_ingestion.py
airflow/dags/ingestion_tasks/: chunking_task.py  embedding_task.py  indexing_task.py  scrapper_task.py
src/: config.py  dependencies.py  logger.py  main.py
src/frontend/: chat.js  index.html  style.css
src/routers/: __init__.py  rag.py
src/schemas/api/: rag.py
src/services/chunking/: content_chunker.py
src/services/embedding/: embedding_service.py
src/services/indexing/: index_config.py  opensearch_indexer.py
src/services/opensearch/: factory.py  hybrid_search_service.py  opensearch_pipeline.py
src/services/rag/: prompts.py  rag_service.py  researcher_subgraph.py  states.py  tf_graph.py
src/services/scrapper/: tensorflow_scrapper.py
