[project]
name = "chattf-prod"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.2",
    "apache-airflow-providers-google>=18.1.0",
    "apache-airflow[postgres]>=3.1.2",
    "asyncio>=4.0.0",
    "bs4>=0.0.2",
    "crawl4ai>=0.7.6",
    "fastapi>=0.117.1",
    "httpx>=0.28.1",
    "ijson>=3.4.0.post0",
    "langchain>=1.0.5",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.4",
    "langchain-google-genai>=3.0.1",
    "langfuse>=3.9.1",
    "langgraph>=1.0.2",
    "numpy>=2.3.4",
    "opensearch-py>=3.0.0",
    "pendulum>=3.1.0",
    "playwright>=1.55.0",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.11.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "tenacity>=9.1.2",
    "uvicorn[standard]>=0.38.0",
]
